week-one-project

--- a/index.html
+++ b/index.html
@@ -3,16 +3,19 @@
   <head>
     <meta charset="UTF-8">
     <title>Bent Creek Ceramics</title>
-    <style>
-@import url('https://fonts.googleapis.com/css?family=Roboto' rel="stylesheet");
-<link href="main.css" rel="stylesheet">
-</style>
+
+
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet";
+    <link href="styles.css" rel="stylesheet">
+
+
+
   </head>
   <body>
   <div class="wrapper">
       <header id="site-header">
           <nav id="main-navigation">
-              <a href="home.html" id="Home">Home</a>
+              <a href="index.html">Home</a>
               <a href="about.html">About</a>
               <a href="newsletter.html">Newsletter</a>
           </nav>
@@ -21,13 +24,29 @@
             <h3>Where art meets nature</h3>
           </div>
 
-          <nav>
-            <ul>
-                <li><a href="home.html">Home</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="newsletter.html">Newsletter</a></li>
-            </ul>
-        </nav>
+
+          <ul>
+            <li>Endless Possibilities</li>
+
+            <li>Sets</li>
+
+            <li>Textures</li>
+
+            <li>Tea Time</li>
+
+            <li>Jars and Containers</li>
+
+            <li>Wasabi and Saki</li>
+
+            <li>Sippin' on Sunshine</li>
+          </ul>
+
+
+          <footer id="site-footer">
+              <span>Copyright 2017, Bent Creek Ceramics</span>
+          </footer>
+
+
 
   </body>
 </html>
