week-one-project

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 
   </head>
   <body>
+  <img src="/Users/jerusmacbook/Documents/Projects/week-one-project/images/bent-creek-logo.png" alt="Bent Creek Ceramics Logo">
+
   <div class="wrapper">
       <header id="site-header">
           <nav id="main-navigation">
@@ -40,6 +42,18 @@
 
             <li>Sippin' on Sunshine</li>
           </ul>
+
+
+
+            <img src="/Users/jerusmacbook/Documents/Projects/week-one-project/images/product-1.jpg">
+            <img src="/Users/jerusmacbook/Documents/Projects/week-one-project/images/product-2.jpg">
+            <img src="/Users/jerusmacbook/Documents/Projects/week-one-project/images/product-3.jpg">
+            <img src="/Users/jerusmacbook/Documents/Projects/week-one-project/images/product-4.jpg">
+            <img src="/Users/jerusmacbook/Documents/Projects/week-one-project/images/product-5.jpg">
+            <img src="/Users/jerusmacbook/Documents/Projects/week-one-project/images/product-6.jpg">
+            <img src="/Users/jerusmacbook/Documents/Projects/week-one-project/images/product-7.jpg">
+          
+
 
 
           <footer id="site-footer">
