--- a/newsletter.html
+++ b/newsletter.html
@@ -10,6 +10,8 @@
 
   </head>
   <body>
+  <img src="/Users/jerusmacbook/Documents/Projects/week-one-project/images/bent-creek-logo.png" alt="Bent Creek Ceramics Logo">
+
   <div class="wrapper">
       <header id="site-header">
           <nav id="main-navigation">
@@ -17,6 +19,27 @@
               <a href="about.html">About</a>
               <a href="newsletter.html">Newsletter</a>
           </nav>
+      <body background="/Users/jerusmacbook/Documents/Projects/week-one-project/images/background-2.jpg">
+
+
+          <p>Sign Up for Our Weekly Newsletter</p>
+
+          <p>Stay up to date with events, activities, news and specials.</p>
+
+          <p>Name</p>
+
+          <p>Email</p>
+
+          <p>Submit</p>
+
+
+          <footer id="site-footer">
+              <span>Copyright 2017, Bent Creek Ceramics</span>
+          </footer>
+
+
+
+
 
 
 
