--- a/about.html
+++ b/about.html
@@ -10,6 +10,8 @@
 
   </head>
   <body>
+  <img src="/Users/jerusmacbook/Documents/Projects/week-one-project/images/bent-creek-logo.png" alt="Bent Creek Ceramics Logo">
+
   <div class="wrapper">
       <header id="site-header">
           <nav id="main-navigation">
@@ -18,11 +20,13 @@
               <a href="newsletter.html">Newsletter</a>
           </nav>
 
+
     <h1>A Community of Artists</h1>
-    <p><img src="/Users/jerusmacbook/Documents/Projects/week-one-project/images/birdhouse.jpg" alt="Birdhouse" style="float:left;width:42px;height:42px;"></p>
+    <p><img src="/Users/jerusmacbook/Documents/Projects/week-one-project/images/birdhouse.jpg" alt="Birdhouse" style="float:left;width:75px;height:75px;"></p>
 
-
+<article>
     <p>Our studio, established in 1989, has been providing local artists with a dedicated evironment for creativity for 20+ years. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+</article>
 
     <blockquote>"Our mission is to provide people with beautiful, functional items which enhance lives."<br>
     -Jenn Wilson (Founder)</blockquote>
@@ -39,7 +43,7 @@
 
 
     <h3>Facilities</h3>
-    <p><img src="/Users/jerusmacbook/Documents/Projects/week-one-project/images/background-1.jpg" alt="Background1"></p>
+    <p><img src="/Users/jerusmacbook/Documents/Projects/week-one-project/images/background-1.jpg" alt="Background1" style="float:right;width:75px;height:75px;"></p>
     <p>Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur.</p>
 
     <p>Every member has access to shelf space and all of the studio's shared equipment.</p>
@@ -70,7 +74,6 @@
       <tr>
     </table>
 </div>
-
 
 
 
