week-one-project

--- a/about.html
+++ b/about.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <title>Bent Creek Ceramics - About</title>
 
-      <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet";
-      <link href="styles.css" rel="stylesheet">
+      <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet";>
+      <link rel="stylesheet" type="text/css" href="styles.css">
 
 
   </head>
@@ -19,6 +19,8 @@
               <a href="about.html">About</a>
               <a href="newsletter.html">Newsletter</a>
           </nav>
+      </header>
+  </div>
 
 
     <h1>A Community of Artists</h1>
@@ -78,9 +80,7 @@
 
 
 
-          <footer id="site-footer">
-              <span>Copyright 2017, Bent Creek Ceramics</span>
-          </footer>
+<div class="footer">Copyright 2017, Bent Creek Ceramics</div>
 
 
   </body>
