--- a/index.html
+++ b/index.html
@@ -5,61 +5,53 @@
     <title>Bent Creek Ceramics</title>
 
 
-    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet";
-    <link href="styles.css" rel="stylesheet">
-
-
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet";>
+    <link rel="stylesheet" type="text/css" href="styles.css">
 
   </head>
-  <body>
-  <img src="/Users/jerusmacbook/Documents/Projects/week-one-project/images/bent-creek-logo.png" alt="Bent Creek Ceramics Logo">
 
-  <div class="wrapper">
+
+  <body>
+    <img src="/Users/jerusmacbook/Documents/Projects/week-one-project/images/bent-creek-logo.png" alt="Bent Creek Ceramics Logo">
+
+    <div class="wrapper">
       <header id="site-header">
           <nav id="main-navigation">
               <a href="index.html">Home</a>
               <a href="about.html">About</a>
               <a href="newsletter.html">Newsletter</a>
           </nav>
+      </header>
+    </div>
           <div>
             <h1>Bent Creek Ceramics</h1>
             <h3>Where art meets nature</h3>
           </div>
 
-
+    <div>
           <ul>
             <li>Endless Possibilities</li>
-
             <li>Sets</li>
-
             <li>Textures</li>
-
             <li>Tea Time</li>
-
             <li>Jars and Containers</li>
-
             <li>Wasabi and Saki</li>
-
             <li>Sippin' on Sunshine</li>
           </ul>
+    </div>
+
+    <div>
+      <img src="/Users/jerusmacbook/Documents/Projects/week-one-project/images/product-1.jpg">
+      <img src="/Users/jerusmacbook/Documents/Projects/week-one-project/images/product-2.jpg">
+      <img src="/Users/jerusmacbook/Documents/Projects/week-one-project/images/product-3.jpg">
+      <img src="/Users/jerusmacbook/Documents/Projects/week-one-project/images/product-4.jpg">
+      <img src="/Users/jerusmacbook/Documents/Projects/week-one-project/images/product-5.jpg">
+      <img src="/Users/jerusmacbook/Documents/Projects/week-one-project/images/product-6.jpg">
+      <img src="/Users/jerusmacbook/Documents/Projects/week-one-project/images/product-7.jpg">
+    </div>
 
 
-
-            <img src="/Users/jerusmacbook/Documents/Projects/week-one-project/images/product-1.jpg">
-            <img src="/Users/jerusmacbook/Documents/Projects/week-one-project/images/product-2.jpg">
-            <img src="/Users/jerusmacbook/Documents/Projects/week-one-project/images/product-3.jpg">
-            <img src="/Users/jerusmacbook/Documents/Projects/week-one-project/images/product-4.jpg">
-            <img src="/Users/jerusmacbook/Documents/Projects/week-one-project/images/product-5.jpg">
-            <img src="/Users/jerusmacbook/Documents/Projects/week-one-project/images/product-6.jpg">
-            <img src="/Users/jerusmacbook/Documents/Projects/week-one-project/images/product-7.jpg">
-          
-
-
-
-          <footer id="site-footer">
-              <span>Copyright 2017, Bent Creek Ceramics</span>
-          </footer>
-
+    <div class="footer">Copyright 2017, Bent Creek Ceramics</div>
 
 
   </body>
