--- a/newsletter.html
+++ b/newsletter.html
@@ -4,38 +4,57 @@
     <meta charset="UTF-8">
     <title>Bent Creek Ceramics - Newsletter</title>
 
-      <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet";
-      <link href="styles.css" rel="stylesheet">
+      <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet";>
+      <link rel="stylesheet" type="text/css" href="styles.css">
 
 
   </head>
   <body>
-  <img src="/Users/jerusmacbook/Documents/Projects/week-one-project/images/bent-creek-logo.png" alt="Bent Creek Ceramics Logo">
+
+    <img src="/Users/jerusmacbook/Documents/Projects/week-one-project/images/bent-creek-logo.png" alt="Bent Creek Ceramics Logo">
 
   <div class="wrapper">
-      <header id="site-header">
+
+      <header id="site-header" class="body">
           <nav id="main-navigation">
               <a href="index.html">Home</a>
               <a href="about.html">About</a>
               <a href="newsletter.html">Newsletter</a>
           </nav>
+      </header>
+  </div>
+
       <body background="/Users/jerusmacbook/Documents/Projects/week-one-project/images/background-2.jpg">
 
-
-          <p>Sign Up for Our Weekly Newsletter</p>
+  <div id="container">
+          <h1>Sign Up for Our Weekly Newsletter</h1>
 
           <p>Stay up to date with events, activities, news and specials.</p>
 
-          <p>Name</p>
+          <form action="./process_form_data.php" method="post">
+                  <label for="name">Name:</label>
+                  <input type="text" name="name" id="name">
+              </form>
 
-          <p>Email</p>
+              <form>
+                  <label for="email">Email:</label>
+                  <input type="email" name="email" id="email">
+              </form>
 
-          <p>Submit</p>
+              <button type="submit" id="submit">Submit</button>
+  </div>
 
 
-          <footer id="site-footer">
-              <span>Copyright 2017, Bent Creek Ceramics</span>
-          </footer>
+  <div class="footer">Copyright 2017, Bent Creek Ceramics</div>
+
+
+
+
+
+
+
+
+
 
 
 
