week-one-project

--- a/index.html
+++ b/index.html
@@ -28,19 +28,19 @@
             <h3>Where art meets nature</h3>
           </div>
 
-    <div>
-          <ul>
-            <li>Endless Possibilities</li>
-            <li>Sets</li>
-            <li>Textures</li>
-            <li>Tea Time</li>
-            <li>Jars and Containers</li>
-            <li>Wasabi and Saki</li>
-            <li>Sippin' on Sunshine</li>
-          </ul>
-    </div>
+          <div>
+            <ul>
+              <li>Endless Possibilities</li>
+              <li>Sets</li>
+              <li>Textures</li>
+              <li>Tea Time</li>
+              <li>Jars and Containers</li>
+              <li>Wasabi and Saki</li>
+              <li>Sippin' on Sunshine</li>
+            </ul>
+          </div>
 
-    <div>
+    <div class="container">
       <img src="/Users/jerusmacbook/Documents/Projects/week-one-project/images/product-1.jpg">
       <img src="/Users/jerusmacbook/Documents/Projects/week-one-project/images/product-2.jpg">
       <img src="/Users/jerusmacbook/Documents/Projects/week-one-project/images/product-3.jpg">
