--- a/about.html
+++ b/about.html
@@ -27,7 +27,7 @@
     <p><img src="/Users/jerusmacbook/Documents/Projects/week-one-project/images/birdhouse.jpg" alt="Birdhouse" style="float:left;width:75px;height:75px;"></p>
 
 <article>
-    <p>Our studio, established in 1989, has been providing local artists with a dedicated evironment for creativity for 20+ years. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+    <p>Our studio, established in 1989, has been providing local artists with a <a href="/Facilities.html">dedicated evironment</a> for creativity for 20+ years. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
 </article>
 
     <blockquote>"Our mission is to provide people with beautiful, functional items which enhance lives."<br>
