--- a/index.html
+++ b/index.html
@@ -2,57 +2,54 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Bent Creek Ceramics</title>
-
-
-    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet";>
-    <link rel="stylesheet" type="text/css" href="styles.css">
-
+      <title>Bent Creek Ceramics</title>
+      <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet";>
+      <link rel="stylesheet" type="text/css" href="styles.css">
   </head>
-
-
   <body>
-    <img src="/Users/jerusmacbook/Documents/Projects/week-one-project/images/bent-creek-logo.png" alt="Bent Creek Ceramics Logo">
-
-    <div class="wrapper">
-      <header id="site-header">
+    <div>
+      <img src="/Users/jerusmacbook/Documents/Projects/week-one-project/images/bent-creek-logo.png" alt="Bent Creek Ceramics Logo">
+    </div>
+      <div class="wrapper">
+        <header id="site-header">
           <nav id="main-navigation">
-              <a href="index.html">Home</a>
-              <a href="about.html">About</a>
-              <a href="newsletter.html">Newsletter</a>
+            <a href="index.html">HOME</a>
+            <a href="about.html">ABOUT</a>
+            <a href="newsletter.html">NEWSLETTER</a>
           </nav>
-      </header>
-    </div>
-          <div>
-            <h1>Bent Creek Ceramics</h1>
-            <h3>Where art meets nature</h3>
-          </div>
+        </header>
+      </div>
+      <br>
+      <div>
+        <h1>Bent Creek Ceramics</h1>
+        <h3>Where art meets nature</h3>
+      </div>
 
-          <div>
-            <ul>
-              <li>Endless Possibilities</li>
-              <li>Sets</li>
-              <li>Textures</li>
-              <li>Tea Time</li>
-              <li>Jars and Containers</li>
-              <li>Wasabi and Saki</li>
-              <li>Sippin' on Sunshine</li>
-            </ul>
-          </div>
+      <div>
+        <ul>
+          <li>Endless Possibilities</li>
+          <li>Sets</li>
+          <li>Textures</li>
+          <li>Tea Time</li>
+          <li>Jars and Containers</li>
+          <li>Wasabi and Saki</li>
+          <li>Sippin' on Sunshine</li>
+        </ul>
+      </div>
+      <br>
+      <div class="container">
+        <img src="/Users/jerusmacbook/Documents/Projects/week-one-project/images/product-1.jpg">
+        <img src="/Users/jerusmacbook/Documents/Projects/week-one-project/images/product-2.jpg">
+        <img src="/Users/jerusmacbook/Documents/Projects/week-one-project/images/product-3.jpg">
+        <img src="/Users/jerusmacbook/Documents/Projects/week-one-project/images/product-4.jpg">
+        <img src="/Users/jerusmacbook/Documents/Projects/week-one-project/images/product-5.jpg">
+        <img src="/Users/jerusmacbook/Documents/Projects/week-one-project/images/product-6.jpg">
+        <img src="/Users/jerusmacbook/Documents/Projects/week-one-project/images/product-7.jpg">
+      </div>
 
-    <div class="container">
-      <img src="/Users/jerusmacbook/Documents/Projects/week-one-project/images/product-1.jpg">
-      <img src="/Users/jerusmacbook/Documents/Projects/week-one-project/images/product-2.jpg">
-      <img src="/Users/jerusmacbook/Documents/Projects/week-one-project/images/product-3.jpg">
-      <img src="/Users/jerusmacbook/Documents/Projects/week-one-project/images/product-4.jpg">
-      <img src="/Users/jerusmacbook/Documents/Projects/week-one-project/images/product-5.jpg">
-      <img src="/Users/jerusmacbook/Documents/Projects/week-one-project/images/product-6.jpg">
-      <img src="/Users/jerusmacbook/Documents/Projects/week-one-project/images/product-7.jpg">
-    </div>
-
-
-    <div class="footer">Copyright 2017, Bent Creek Ceramics</div>
-
+      <div>
+        <div class="footer">Copyright 2017, Bent Creek Ceramics</div>
+      </div>
 
   </body>
 </html>
