--- a/about.html
+++ b/about.html
@@ -3,85 +3,95 @@
   <head>
     <meta charset="UTF-8">
     <title>Bent Creek Ceramics - About</title>
-
       <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet";>
       <link rel="stylesheet" type="text/css" href="styles.css">
-
-
   </head>
   <body>
-  <img src="/Users/jerusmacbook/Documents/Projects/week-one-project/images/bent-creek-logo.png" alt="Bent Creek Ceramics Logo">
+    <img src="/Users/jerusmacbook/Documents/Projects/week-one-project/images/bent-creek-logo.png" alt="Bent Creek Ceramics Logo">
 
-  <div class="wrapper">
+    <div class="wrapper">
       <header id="site-header">
           <nav id="main-navigation">
-              <a href="index.html">Home</a>
-              <a href="about.html">About</a>
-              <a href="newsletter.html">Newsletter</a>
+              <a href="index.html">HOME</a>
+              <a href="about.html">ABOUT</a>
+              <a href="newsletter.html">NEWSLETTER</a>
           </nav>
       </header>
-  </div>
-
-
-    <h1>A Community of Artists</h1>
-    <p><img src="/Users/jerusmacbook/Documents/Projects/week-one-project/images/birdhouse.jpg" alt="Birdhouse" style="float:left;width:75px;height:75px;"></p>
-
-<article>
-    <p>Our studio, established in 1989, has been providing local artists with a <a href="/Facilities.html">dedicated evironment</a> for creativity for 20+ years. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
-</article>
-
-    <blockquote>"Our mission is to provide people with beautiful, functional items which enhance lives."<br>
-    -Jenn Wilson (Founder)</blockquote>
-
-    <h3>History</h3>
-
-    <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.</p>
-  <div>
-    <h1>Room to Grow</h1>
-  </div>
-    <img src="/Users/jerusmacbook/Documents/Projects/week-one-project/images/background-3.jpg" alt="Room to Grow">
-
-
-
-
-    <h3>Facilities</h3>
-    <p><img src="/Users/jerusmacbook/Documents/Projects/week-one-project/images/background-1.jpg" alt="Background1" style="float:right;width:75px;height:75px;"></p>
-    <p>Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur.</p>
-
-    <p>Every member has access to shelf space and all of the studio's shared equipment.</p>
-
-    <h3>Monthly Plans</h3>
-      <div class="table">
-        <table>
-          <table border="1">
-            <tr>
-              <td>Plan</td>
-              <td>Price</td>
-              <td>Access</td>
-            </tr>
-            <tr>
-              <td>Desk Only</td>
-              <td>$50/mo.</td>
-              <td>Business Hours + Weekly Kiln Access</td>
-            </tr>
-            <tr>
-              <td>Desk + Storage</td>
-              <td>$100/mo.</td>
-              <td>Business Hours + Weekly Kiln Access</td>
-            </tr>
-            <tr>
-              <td>Unlimited</td>
-              <td>$150/mo.</td>
-              <td>Unlimited Access</td>
-              <tr>
-          </table>
-        </div>
-
-
-
-
-        <div class="footer">Copyright 2017, Bent Creek Ceramics</div>
-
+    </div>
+      <br>
+      <br>
+    <div>
+      <h1>A Community of Artists</h1>
+      <br>
+        <p><img src="/Users/jerusmacbook/Documents/Projects/week-one-project/images/birdhouse.jpg" alt="Birdhouse" style="float:left;width:75px;height:75px;"></p>
+      <br>
+      <article>
+        <p>Our studio, established in 1989, has been providing local artists with a <a href="/Facilities.html">dedicated evironment</a> for creativity for 20+ years. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+      </article>
+    </div>
+      <br>
+    <div class="blockquote">
+        <blockquote>"Our mission is to provide people with beautiful, functional items which enhance lives."<br>
+          -Jenn Wilson (Founder)</blockquote>
+    </div>
+      <br>
+      <br>
+    <div>
+      <h2>History</h2>
+      <br>
+        <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.</p>
+    </div>
+      <br>
+    <div class="">
+      <h1>Room to Grow</h1>
+        <img src="/Users/jerusmacbook/Documents/Projects/week-one-project/images/background-3.jpg" alt="Room to Grow">
+    </div>
+    <br>
+    <div>
+      <h2>Facilities</h2>
+        <p><img src="/Users/jerusmacbook/Documents/Projects/week-one-project/images/background-1.jpg" alt="Background1" style="float:right;width:75px;height:75px;"></p>
+    <br>
+        <p>Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur.</p>
+      </div>
+    <br>
+      <div>
+          <p>Every member has access to shelf space and all of the studio's shared equipment.</p>
+      </div>
+    <br>
+      <div>
+        <h2>Monthly Plans</h2>
+          <div class="table">
+            <table>
+              <table border="1">
+                <tr class="t1">
+                  <td>Plan</td>
+                  <td>Price</td>
+                  <td>Access</td>
+                </tr>
+                <tr class="t2">
+                  <td>Desk Only</td>
+                  <td>$50/mo.</td>
+                  <td>Business Hours + Weekly Kiln Access</td>
+                </tr>
+                <tr class="t3">
+                  <td>Desk + Storage</td>
+                  <td>$100/mo.</td>
+                  <td>Business Hours + Weekly Kiln Access</td>
+                </tr>
+                <tr class="t4">
+                  <td>Unlimited</td>
+                  <td>$150/mo.</td>
+                  <td>Unlimited Access</td>
+                  <tr>
+              </table>
+          </div>
+          <br>
+          <br>
+          <br>
+          <br>
+          <div>
+            <div class="footer">Copyright 2017, Bent Creek Ceramics</div>
+          </div>
 
   </body>
 </html>
