--- a/about.html
+++ b/about.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="UTF-8">
     <title>Bent Creek Ceramics - About</title>
-      <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet";>
+      <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
       <link rel="stylesheet" type="text/css" href="styles.css">
   </head>
   <body>
-    <img src="/Users/jerusmacbook/Documents/Projects/week-one-project/images/bent-creek-logo.png" alt="Bent Creek Ceramics Logo">
+
 
     <div class="wrapper">
       <header id="site-header">
@@ -35,20 +35,26 @@
           -Jenn Wilson (Founder)</blockquote>
     </div>
       <br>
+      <hr>
       <br>
     <div>
-      <h2>History</h2>
+      <p>History</p>
       <br>
         <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.</p>
     </div>
       <br>
-    <div class="">
-      <h1>Room to Grow</h1>
-        <img src="/Users/jerusmacbook/Documents/Projects/week-one-project/images/background-3.jpg" alt="Room to Grow">
+    <div class="image">
+      <a target="_blank" href="background-3.jpg">
+
+        <img src="/Users/jerusmacbook/Documents/Projects/week-one-project/images/background-3.jpg" width=1100px height=700px alt="Room to Grow">
+      </a>
+      <div class="desc">Room to Grow</div>
     </div>
     <br>
+    <hr>
+    <br>
     <div>
-      <h2>Facilities</h2>
+      <p>Facilities</p>
         <p><img src="/Users/jerusmacbook/Documents/Projects/week-one-project/images/background-1.jpg" alt="Background1" style="float:right;width:75px;height:75px;"></p>
     <br>
         <p>Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur.</p>
@@ -58,9 +64,14 @@
           <p>Every member has access to shelf space and all of the studio's shared equipment.</p>
       </div>
     <br>
+    <hr>
+    <br>
       <div>
-        <h2>Monthly Plans</h2>
+
+          <p>Monthly Plans</p>
+
           <div class="table">
+
             <table>
               <table border="1">
                 <tr class="t1">
