--- a/index.html
+++ b/index.html
@@ -3,13 +3,11 @@
   <head>
     <meta charset="UTF-8">
       <title>Bent Creek Ceramics</title>
-      <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet";>
+      <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
       <link rel="stylesheet" type="text/css" href="styles.css">
   </head>
   <body>
-    <div>
-      <img src="/Users/jerusmacbook/Documents/Projects/week-one-project/images/bent-creek-logo.png" alt="Bent Creek Ceramics Logo">
-    </div>
+
       <div class="wrapper">
         <header id="site-header">
           <nav id="main-navigation">
@@ -22,34 +20,60 @@
       <br>
       <div>
         <h1>Bent Creek Ceramics</h1>
-        <h3>Where art meets nature</h3>
-      </div>
-
-      <div>
-        <ul>
-          <li>Endless Possibilities</li>
-          <li>Sets</li>
-          <li>Textures</li>
-          <li>Tea Time</li>
-          <li>Jars and Containers</li>
-          <li>Wasabi and Saki</li>
-          <li>Sippin' on Sunshine</li>
-        </ul>
+        <h2>Where art meets nature</h2>
       </div>
       <br>
-      <div class="container">
-        <img src="/Users/jerusmacbook/Documents/Projects/week-one-project/images/product-1.jpg">
-        <img src="/Users/jerusmacbook/Documents/Projects/week-one-project/images/product-2.jpg">
-        <img src="/Users/jerusmacbook/Documents/Projects/week-one-project/images/product-3.jpg">
-        <img src="/Users/jerusmacbook/Documents/Projects/week-one-project/images/product-4.jpg">
-        <img src="/Users/jerusmacbook/Documents/Projects/week-one-project/images/product-5.jpg">
-        <img src="/Users/jerusmacbook/Documents/Projects/week-one-project/images/product-6.jpg">
-        <img src="/Users/jerusmacbook/Documents/Projects/week-one-project/images/product-7.jpg">
-      </div>
 
-      <div>
-        <div class="footer">Copyright 2017, Bent Creek Ceramics</div>
+      <div class="gallery">
+        <a target="_blank" href="product1.jpg">
+          <img src="/Users/jerusmacbook/Documents/Projects/week-one-project/images/product-1.jpg" alt="Product1">
+        </a>
+        <div class="desc">Endless Possibilities</div>
       </div>
+      <div class="gallery">
+        <a target="_blank" href="product2.jpg">
+          <img src="/Users/jerusmacbook/Documents/Projects/week-one-project/images/product-2.jpg" alt="Product2">
+        </a>
+        <div class="desc">Sets</div>
+      </div>
+      <div class="gallery">
+        <a target="_blank" href="product3.jpg">
+          <img src="/Users/jerusmacbook/Documents/Projects/week-one-project/images/product-3.jpg" alt="Product3">
+        </a>
+        <div class="desc">Textures</div>
+      </div>
+      <div class="gallery">
+        <a target="_blank" href="product4.jpg">
+          <img src="/Users/jerusmacbook/Documents/Projects/week-one-project/images/product-4.jpg" alt="Product4">
+        </a>
+        <div class="desc">Tea Time</div>
+      </div>
+      <div class="gallery">
+        <a target="_blank" href="product5.jpg">
+          <img src="/Users/jerusmacbook/Documents/Projects/week-one-project/images/product-5.jpg" alt="Product5">
+        </a>
+        <div class="desc">Jars and Containers</div>
+      </div>
+      <div class="gallery">
+        <a target="_blank" href="product6.jpg">
+          <img src="/Users/jerusmacbook/Documents/Projects/week-one-project/images/product-6.jpg" alt="Product6">
+        </a>
+        <div class="desc">Wasabi and Saki</div>
+      </div>
+      <div class="gallery">
+        <a target="_blank" href="product7.jpg">
+          <img src="/Users/jerusmacbook/Documents/Projects/week-one-project/images/product-7.jpg" alt="Product7">
+        </a>
+        <div class="desc">Sippin' On Sunshine</div>
+      </div>
+      <br>
+      <br>
+      <br>
+      <br>
+        <div>
+          <div class="footer">Copyright 2017, Bent Creek Ceramics</div>
+        </div>
+    </div>
 
   </body>
 </html>
