--- a/newsletter.html
+++ b/newsletter.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="UTF-8">
     <title>Bent Creek Ceramics - Newsletter</title>
-      <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet";>
+      <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
       <link rel="stylesheet" type="text/css" href="styles.css">
   </head>
     <body>
-      <img src="/Users/jerusmacbook/Documents/Projects/week-one-project/images/bent-creek-logo.png" alt="Bent Creek Ceramics Logo">
+
 
         <div class="wrapper">
           <header id="site-header" class="body">
@@ -21,36 +21,74 @@
 
           <body background="/Users/jerusmacbook/Documents/Projects/week-one-project/images/background-2.jpg">
 
-        <div id="container">
-          <h1>Sign Up for Our Weekly Newsletter</h1>
+            <div class="signup">
+              <h1>Sign Up for Our Weekly Newsletter</h1>
+              <br>
+              Stay up to date with events, activities, news and specials.
 
-          <p>Stay up to date with events, activities, news and specials.</p>
 
-          <form action="./process_form_data.php" method="post">
-            <label for="name">Name:</label>
-            <input type="text" name="name" id="name">
-          </form>
+              <form action="./process_form_data.php" method="post">
+                <label for="name">Name:</label>
+                <input type="text" name="name" id="name">
+              </form>
 
-          <form>
-            <label for="email">Email:</label>
-            <input type="email" name="email" id="email">
-          </form>
-        </div>
-        <div>
-            <button type="submit" id="submit">Submit</button>
-        </div>
-          <br>
-          <br>
-          <br>
-          <br>
-          <br>
-          <br>
-          <br>
-          <br>
-          <br>
-          <br>
-        <div>
-            <div class="footer">Copyright 2017, Bent Creek Ceramics>
+              <form>
+                <label for="email">Email:</label>
+                <input type="email" name="email" id="email">
+              </form>
+
+
+              <button type="submit" id="submit">Submit</button>
+            </div>
+            <br>
+            <br>
+
+
+
+
+<!-- New newsletter code -->
+
+            <div id="newsletter-form">
+                            <div class="form-box">
+                                <h1>Sign Up for Our Weekly Newsletter</h1>
+                                <h3>Stay up to date with events, activities, news and specials.</h3>
+                                <form>
+                                    <div class="form-input">
+                                        <div class="line-one">
+                                            Name: <input type="text" name="name"><br>
+                                        </div>
+                                        <div class="line-two">
+                                            E-mail: <input type="email" name="email">
+                                        </div>
+                                    </div>
+                                    <div class="submit">
+                                        <input type="submit" value="Submit">
+                                    </div>
+                                </form>
+                            </div>
+                        </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+            <br>
+            <br>
+            <div>
+              <div class="footer">Copyright 2017, Bent Creek Ceramics</div>
         </div>
 
         <script type="text/javascript">
